--- a/p2p.html
+++ b/p2p.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P2P</title>
-    <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/custom.css">
-    <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="custom.css">
     <link rel="icon" href="./image/dacc_icon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 
@@ -277,7 +277,6 @@
             menuActive.classList.toggle('active')
         }
     </script>
-    <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
 
 
 </body>
