--- a/fin-gl.html
+++ b/fin-gl.html
@@ -324,14 +324,19 @@
     <footer>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3">
                     <h1>Daccount</h1>
                     <p>
                         Triagle soft Co.,Ltd<br>
-                        1213/237 Soi Ladprao 94, Phlapphla Subdistrict, Wang Thonglang District Bangkok 10310 Tel 085xxxxxxx example@humano.co.th
+                        1213/237 Soi Ladprao 94,<br> 
+                        Phlapphla Subdistrict,<br>
+                        Wang Thonglang District<br>
+                        Bangkok 10310<br>
+                        Tel 085xxxxxxx<br>
+                        example@humano.co.th
                     </p>
                 </div>
-                <div class="col-12 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3">
                     <h2>Product</h1>
                     <ul>
                         <li><a href="#">Package and Promotion</a></li>
@@ -340,18 +345,19 @@
                         <li><a href="#">FIN-GL Module</a></li>
                     </ul>
                 </div>
-                <div class="col-12 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3">
                     <h2>Resource</h1>
                     <ul>
                         <li><a href="#">Manaul</a></li>
                         <li><a href="#">Contact Support</a></li>
                     </ul>
                 </div>
-                <div class="col-12 col-lg-3">
+                <div class="col-12 col-md-6 col-lg-3">
                     <h2>Other</h1>
                     <ul>
                         <li><a href="#">Payment</a></li>
                         <li><a href="#">Term of Service</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Cookies Policy</a></li>
                     </ul>
                 </div>
@@ -374,6 +380,7 @@
             </div>
         </div>
     </footer>
+
     <script src="main.js"></script>
 
 
